# This config file is required for Black.
# Unforunately, black does not support setup.cfg (refer to link).
# https://github.com/psf/black/issues/683#issuecomment-490236406

[build-system]
requires = [
  "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "zppy"
version = "3.1.0rc1"
description = "Post-processing software for E3SM"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Ryan Forsyth", email = "forsyth2@llnl.gov" },
  { name = "Chris Golaz", email = "golaz1@llnl.gov" },
]
keywords = ["E3SM", "post-processing", "climate", "analysis"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/E3SM-Project/zppy"
Issues = "https://github.com/E3SM-Project/zppy/issues"
Repository = "https://github.com/E3SM-Project/zppy.git"

[project.scripts]
zppy = "zppy.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["zppy", "zppy.*"]

[tool.setuptools.package-data]
zppy = [
  "**/*.bash",
  "**/*.csh",
  "**/*.cfg",
  "**/*.ini",
  "**/*.sh",
  "**/*.json",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | conda
    | docs
 )/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pycodestyle]
max-line-length = 119
exclude = [
  ".tox",
  ".git",
  "*/migrations/*",
  "*/static/CACHE/*",
  "docs",
  "node_modules",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "*__init__.py",
  "venv",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
